Bug 291144 - Mouse wheel scrolls by setting doesn't work
Summary: Mouse wheel scrolls by setting doesn't work
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_mouse (other bugs)
Version First Reported In: 1.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Marie Loise Nolden
URL:
Keywords:
: 297844 311581 333613 342219 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-01-10 10:12 UTC by Ward
Modified: 2015-10-29 19:02 UTC (History)
13 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ward 2012-01-10 10:12:37 UTC
Version:           1.0 (using KDE 4.7.1) 
OS:                Linux

The default value for the "Mouse wheel scrolls by" setting is: 3 lines.
If you change it to another value (10 lines in my case), the scroll wheel keeps scrolling by 3 lines. Even after you've restarted your whole computer, it keeps scrolling by 3 lines.

Reproducible: Always

Steps to Reproduce:
System Settings
Input devices
Mouse
Advanced
Set Mouse wheel scrolls by on 10 lines.
Apply

Open an application where you need to scroll. Scroll with your mouse wheel.  ...and see that it only scrolls with 3 lines at a time instead of 10 lines.

Actual Results:  
Scrolls by 3 lines

Expected Results:  
Scrolls by the number of lines I've configured (10 lines in my case)

OS: Linux (x86_64) release 3.0.0-12-generic
Compiler: gcc
Kubuntu 11.10
Comment 1 nowardev 2012-03-16 12:47:25 UTC
kubuntu 12.04 the same problem  kde 4.8.1


Bus 003 Device 003: ID 03f0:8107 Hewlett-Packard
Comment 2 parcours.lingual 2012-04-08 15:42:55 UTC
On Archlinux i have the same problem. KDE is 4.8.2. I hope it will be fixed soon.
Comment 3 Christoph Feck 2012-04-11 00:04:32 UTC
*** Bug 297844 has been marked as a duplicate of this bug. ***
Comment 4 Jekyll Wu 2012-04-16 04:55:45 UTC
It seems that option is not used at all by most KDE applications

http://lxr.kde.org/search?filestring=&string=WheelScrollLines
Comment 5 Lars Kanis 2012-05-11 07:13:50 UTC
I can confirm this problem on Kubuntu 12.04, too, but I remember than this setting worked in the past.
Comment 6 parcours.lingual 2012-05-11 10:20:44 UTC
I have ArchLinux, KDE 4.8.3. I can say that this function works for me but only for KDE applications but i haven't tested for all KDE applications.  GTK applications doesn't recognize the configuration.
Comment 7 Cristian Tibirna 2013-02-15 14:41:45 UTC
I confirm that this problem still exists in KDE 4.10 (installed from OpenSUSE 12.2 "official" rpms).

I became (painfully) aware of this because the behavior of kmix with respect with mouse wheel scrolling changed and the volume changes are stuttery.

I tested on 3 different machines (same KDE 4.10 version and same operating system) with microsoft mouse or with lenovo trackpoint keyboard (with wheel scrolling emulation).

I try to change the speed to 1 line and it just stays to 3 whatever I try.
Comment 8 Nemanja Boric 2013-03-29 09:23:54 UTC
Still not resolved. 

I am using imwheel package as a replacement, but that screws mouse wheel + additional key shortcuts in other applications (Chrome, Firefox zooming, etc.).
Comment 9 Christoph Feck 2013-04-20 20:35:06 UTC
*** Bug 311581 has been marked as a duplicate of this bug. ***
Comment 10 Francesco Noacco 2013-04-20 22:08:00 UTC
*** This bug has been confirmed by popular vote. ***
Comment 11 code32 2013-05-14 06:07:19 UTC
kubuntu 13.04 the same problem  kde 4.10.2
Comment 12 floown 2014-04-19 11:36:05 UTC
The problem exist always on Kubuntu LTS 14.04 :\
Comment 13 Christoph Feck 2014-04-19 20:11:45 UTC
*** Bug 333613 has been marked as a duplicate of this bug. ***
Comment 14 naelphin 2014-08-09 00:00:32 UTC
With 5 it has got even worse, now applications like Konsole and Kate ignore wheelScrollLines and always use 3. I assume this is a completely dead setting now with the new 5 world?
Comment 15 Christoph Feck 2014-08-16 09:49:39 UTC
Yep, KGlobalSettings is gone. Check if you have qtconfig-qt5 installed. There you can change the setting for "Wheel Scroll Lines", but I am not sure if the applications you are using respect this setting. If they do not, report a bug for each application.
Comment 16 Christoph Feck 2015-01-23 21:31:48 UTC
*** Bug 342219 has been marked as a duplicate of this bug. ***
Comment 17 David Rosca 2015-10-29 19:01:49 UTC
Git commit 65af8a044f1d050f5d68b7a0afb9f99b6b9f7edb by David Rosca.
Committed on 29/10/2015 at 18:36.
Pushed by drosca into branch 'master'.

Fix WheelScrollLines settings with Qt >= 5.5

Use platform theme hint instead of manually using
QApplication::setWheelScrollLines
REVIEW: 125863

M  +9    -1    src/platformtheme/khintssettings.cpp

http://commits.kde.org/frameworkintegration/65af8a044f1d050f5d68b7a0afb9f99b6b9f7edb
Comment 18 David Rosca 2015-10-29 19:02:27 UTC
Just for the record, this option only works with Qt apps.