Fix WheelScrollLines settings with Qt >= 5.5

Use platform theme hint instead of manually using
QApplication::setWheelScrollLines

BUG: 291144
REVIEW: 125863